tempfile/impl-trait-for-tuples/tests/ui/max_before_min_in_arguments.rs
#[impl_trait_for_tuples::impl_for_tuples(5, 2)]
trait Test {}

fn main() {}
